force-app/main/default/objects/Doublons__c/Doublons__c.object-meta.xml
<CustomObject>
    <label>Doublon(API)</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>ID de Doublons(API)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doublons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>