force-app/main/default/objects/Doublons__c/fields/details__c.field-meta.xml
<CustomField>
    <fullName>details__c</fullName>
    <label>details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>