force-app/main/default/objects/Doublons__c/fields/Doublon_Potentiel_Compte2__c.field-meta.xml
<CustomField>
    <fullName>Doublon_Potentiel_Compte2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doublon Potentiel Compte 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Doublons (Doublon Potentiel Compte)</relationshipLabel>
    <relationshipName>Doublons1</relationshipName>
    <type>Lookup</type>
</CustomField>