force-app/main/default/objects/Doublons__c/fields/Doublon_Potentiel_Compte3__c.field-meta.xml
<CustomField>
    <fullName>Doublon_Potentiel_Compte3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doublon Potentiel Compte 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Doublons (Doublon Potentiel Compte 3)</relationshipLabel>
    <relationshipName>Doublons2</relationshipName>
    <type>Lookup</type>
</CustomField>