force-app/main/default/objects/Doublons__c/fields/Doublon_Potentiel_Compte__c.field-meta.xml
<CustomField>
    <fullName>Doublon_Potentiel_Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doublon Potentiel Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Doublons</relationshipLabel>
    <relationshipName>Doublons</relationshipName>
    <type>Lookup</type>
</CustomField>