force-app/main/default/objects/Doublons__c/fields/Doublon_Potentiel_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Doublon_Potentiel_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doublon Potentiel Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doublons (Doublon Potentiel Contact 2)</relationshipLabel>
    <relationshipName>Doublons1</relationshipName>
    <type>Lookup</type>
</CustomField>