force-app/main/default/objects/Doublons__c/fields/Doublon_Potentiel_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Doublon_Potentiel_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doublon Potentiel Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doublons (Doublon Potentiel Contact 3)</relationshipLabel>
    <relationshipName>Doublons2</relationshipName>
    <type>Lookup</type>
</CustomField>