force-app/main/default/objects/Doublons__c/fields/Doublon_Potentiel_Contact__c.field-meta.xml
<CustomField>
    <fullName>Doublon_Potentiel_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doublon Potentiel Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doublons</relationshipLabel>
    <relationshipName>Doublons</relationshipName>
    <type>Lookup</type>
</CustomField>