force-app/main/default/objects/Doublons__c/fields/ID_paiement__c.field-meta.xml
<CustomField>
    <fullName>ID_paiement__c</fullName>
    <label>ID paiement</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>