force-app/main/default/objects/Doublons__c/fields/Infos__c.field-meta.xml
<CustomField>
    <fullName>Infos__c</fullName>
    <label>Infos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>