force-app/main/default/objects/Doublons__c/fields/Paiement__c.field-meta.xml
<CustomField>
    <fullName>Paiement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paiement</label>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Doublons</relationshipLabel>
    <relationshipName>Doublons</relationshipName>
    <type>Lookup</type>
</CustomField>