force-app/main/default/objects/Doublons__c/listViews/A_traiter.listView-meta.xml
<ListView>
    <fullName>A_traiter</fullName>
    <columns>NAME</columns>
    <columns>Doublon_Potentiel_Contact__c</columns>
    <columns>ID_paiement__c</columns>
    <columns>Statut__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>A traiter</value>
    </filters>
    <label>A traiter</label>
</ListView>