force-app/main/default/objects/Doublons__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ID_paiement__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>